[WPE] Crash when running the mdn-bcd-collector test suite after 292932@main https://bugs.webkit.org/show_bug.cgi?id=293786

Reviewed by Carlos Alberto Lopez Perez.

There is a risk of recursion within the mainloop spin in accessCamera(), when enumerateDevices() is
called multiple times without awaiting the result. For the time being, exit early if an
accessCamera() call is already in-progress.

* Source/WebCore/platform/mediastream/gstreamer/DesktopPortal.cpp:
(WebCore::DesktopPortalCamera::accessCamera):

Canonical link: https://commits.webkit.org/295675@main